@@ -95,7 +95,9 @@ public abstract class Value implements CSSValue, CSSPrimitiveValue
 	 */
 	protected DOMException createDOMException( )
 	{
-		Object[] p = new Object[]{new Integer( getCssValueType( ) )};
+		Object[] p = new Object[]{
+			Integer.valueOf( getCssValueType( ) )
+		};
 		String s = Messages.formatMessage( "invalid.value.access", p );
 		return new DOMException( DOMException.INVALID_ACCESS_ERR, s );
 	}
